# kicad-source-mirror

./: .travis.yml  CMakeLists.txt
common/: CMakeLists.txt
common/geometry/: shape_poly_set.cpp  shape_polygon.cpp
common/swig/: kicad.i
include/: class_eda_rect.h  fp_lib_table_lexer.h
include/geometry/: shape_line_chain.h  shape_poly_set.h  shape_polygon.h
include/math/: vector2d.h
pcbnew/: class_board.cpp  class_zone.cpp  class_zone.h  class_zone_settings.cpp  drc.cpp  eagle_plugin.cpp  edit.cpp  kicad_plugin.cpp  legacy_plugin.cpp  onrightclick.cpp  pcb_painter.cpp  pcb_parser.cpp  specctra_export.cpp  zone_filling_algorithm.cpp  zones_by_polygon.cpp  zones_functions_for_undo_redo.cpp  zones_test_and_combine_areas.cpp
pcbnew/dialogs/: dialog_copper_zones.cpp  dialog_keepout_area_properties.cpp  dialog_non_copper_zones_properties.cpp
pcbnew/pcad2kicadpcb_plugin/: pcb_polygon.cpp
pcbnew/tools/: drawing_tool.cpp  grid_helper.cpp  pcb_editor_control.cpp  point_editor.cpp
polygon/: PolyLine.cpp
qa/data/: fixtures_geometry.h
qa/geometry/: CMakeLists.txt  test_chamfer_fillet.cpp  test_collision.cpp  test_iterator.cpp  test_module.cpp
tests/: CMakeLists.txt  chamfer_fillet_test.cpp  collision_test.cpp  fixtures.h  module.cpp  polygon_iterator.cpp  test_chamfer_fillet.cpp  test_collision.cpp  test_iterator.cpp
